feat!: using vite and rollup, add docs site

--- a/src/lib/styles/cursor.scss
+++ b/src/lib/styles/cursor.scss
@@ -1,8 +1,13 @@
 // 鼠标指针类型
+
 .cursor-default {
   cursor: default !important;
 }
 
 .cursor-pointer {
   cursor: pointer !important;
+}
+
+.cursor-move {
+  cursor: move !important;
 }
