--- a/src/lib/styles/float.scss
+++ b/src/lib/styles/float.scss
@@ -1,9 +1,9 @@
 .fl, .float-left {
-  float: left;
+  float: left !important;
 }
 
 .fr, .float-right {
-  float: right;
+  float: right !important;
 }
 
 .clearfix {
