--- a/src/lib/styles/variables/index.scss
+++ b/src/lib/styles/variables/index.scss
@@ -2,6 +2,7 @@
 $--spacing-upper-limit-value: 56 !default;
 $--spacing-interval-value: 1 !default;
 $--spacing-lower-limit-value: 0 !default;
+$--spacing-times-value: 1 !default;
 
 // font-size
 $--font-size-upper-limit-value: 28 !default;
