--- a/src/lib/styles/variables/index.scss
+++ b/src/lib/styles/variables/index.scss
@@ -13,3 +13,6 @@ $--font-size-lower-limit-value: 12 !default;
 $--font-weight-upper-limit-value: 900 !default;
 $--font-weight-interval-value: 100 !default;
 $--font-weight-lower-limit-value: 100 !default;
+
+// flex
+$--flex-proportion-limit-value: 10 !default;
